fix overflow issue

--- a/style.css
+++ b/style.css
@@ -118,7 +118,8 @@ img {
 }
 .section {
 	background-color: #fff;
-  padding: 100px 0;
+	padding: 100px 0;
+	overflow-x: hidden;
 }
 .second-bg {
 	background-color: #fafafa;
